# Spawn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  changelog.md  commands.md  getting-started.md
src/devbootstrap/cli/: app.py  prompts.py
src/devbootstrap/core/: registry.py
src/devbootstrap/generators/: project_generator.py
src/devbootstrap/utils/: uv.py
src/spawn/: __init__.py
src/spawn/cli/: app.py  prompts.py
src/spawn/core/: exceptions.py  models.py  registry.py
src/spawn/generators/: project_generator.py
src/spawn/github/: publisher.py
src/spawn/templates/: base.py  data_science.py  fastapi.py  files.py  ml_project.py  python_script.py  shared_content.py
src/spawn/templates/automation/: __init__.py  content.py
src/spawn/templates/backend_api/: __init__.py  content.py
src/spawn/templates/chatbot/: __init__.py  content.py
src/spawn/templates/cli_application/: __init__.py  content.py
src/spawn/templates/data_science/: __init__.py  content.py
src/spawn/templates/fastapi_template/: __init__.py  content.py
src/spawn/templates/ml_project/: __init__.py  content.py
src/spawn/utils/: banner.py  git.py  next_steps.py  success.py  uv.py  validators.py
tests/: test_app.py  test_automation_generator.py  test_automation_template.py  test_chatbot_generator.py  test_chatbot_template.py  test_cli_application_generator.py  test_cli_application_template.py  test_doctor.py  test_generator.py  test_github_publisher.py  test_models.py  test_prompts.py  test_registry.py  test_templates.py  test_validators.py
(+2 files in other folders)
