[project]
name = "devbootstrap"
version = "0.1.0"
description = "Development environment bootstrapper for Python projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
devbootstrap = "devbootstrap.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devbootstrap"]